--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,14 @@
 [package]
-name = "dpim2025"
+name = "femrs"
 version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-nalgebra = "0.34.0"
 once_cell = "1.21.3"
 rand = "0.9.2"
-tempfile = "3.20.0"
+tempfile = "3.21.0"
 scirs2-sparse = { git = "https://github.com/tiagomrns/scirs", package = "scirs2-sparse" }
 num-integer = "0.1.46"
 itertools = "0.14.0"
+ndarray = "0.16.1"
+memmap2 = "0.9.8"
